Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* fix a truncation error in suffix version parsing resulting in
  _p2010081516093 being less than _p2009072801401 .

* pkgcore.ebuild.restricts now contains some generally useful
  building block restrictions for any api consumers

* full rewrite of EAPI helpers adding better error info, saner code,
  double checked against PMS and portage/paludis to ensure no oddities.

* fix to buildpkg/pristine-binpkg saving.  If you're looking for
  something to contribute to pkgcore wise, tests for this would be
  appreciated.

* Roughly a 11x speedup in metadata regeneration; basically rework
  a fix that was added to to 0.5.11 (dealing with portage induced
  breakage in env loadup from their declare usage).

* write support for DEFINED_PHASES.

* bashrc hooks now run from ${S} or ${WORKDIR}, depending on
  PMS rules for that phase.

* match the other PM's for econf; update ${WORKDIR} instances of
  config.{sub,guess} from /usr/share/gnuconfig.

* added protection against bad environment dumps from other PMs for T
  during env restoration.

* removed RESTRICT=autoconfig support.

* fix compatibility regression introduced in file-5.05 involving MAGIC_NONE.

* handle keyboard interrupts better during compilation; no longer display
  die tracebacks if the user intentionally stopped the compilation.

* duplicate a portage workaround for emacs ebuild; specifically don't
  regenerate infodir if the ebuild placed a .keepinfodir in the directory.
  gentoo bug #257260.

* add workaround to disable unzip during unpack going interactive during
  a failure; gentoo bug #336285.

* fixed traceback during displaying a summary for 'pinspect eapi_usage'

* add EAPI limitation to all portageq invocations, and support USE dep
  usage with has_version and friends.

* handle portage's new interpretation of the sync retries variable for portage
  configuration.
